--- a/app/src/main/res/layout/activity_example_operator.xml
+++ b/app/src/main/res/layout/activity_example_operator.xml
@@ -16,16 +16,27 @@
         android:textAllCaps="false"
         android:textColor="@android:color/black" />
 
-    <ScrollView
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/textView"
+        <ProgressBar
+            android:id="@+id/progress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:visibility="gone" />
+
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textColor="@android:color/black" />
+            android:layout_height="match_parent">
 
-    </ScrollView>
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/black" />
 
+        </ScrollView>
+    </RelativeLayout>
 </LinearLayout>
