--- a/app/src/main/res/layout/activity_operators.xml
+++ b/app/src/main/res/layout/activity_operators.xml
@@ -34,5 +34,12 @@
             android:text="@string/zip"
             android:textColor="@android:color/black" />
 
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="startDisposableActivity"
+            android:text="@string/disposable"
+            android:textColor="@android:color/black" />
+
     </LinearLayout>
 </ScrollView>
