Added Interval operator definition in ReadMe

--- a/app/src/main/res/layout/activity_operators.xml
+++ b/app/src/main/res/layout/activity_operators.xml
@@ -55,5 +55,12 @@
             android:text="@string/interval"
             android:textColor="@android:color/black" />
 
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="startTakeActivity"
+            android:text="@string/take"
+            android:textColor="@android:color/black" />
+
     </LinearLayout>
 </ScrollView>
