Added Timer and Take Operator

--- a/app/src/main/res/layout/activity_operators.xml
+++ b/app/src/main/res/layout/activity_operators.xml
@@ -62,5 +62,12 @@
             android:text="@string/take"
             android:textColor="@android:color/black" />
 
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="startTimerActivity"
+            android:text="@string/timer"
+            android:textColor="@android:color/black" />
+
     </LinearLayout>
 </ScrollView>
