Added Single Observer Operator

--- a/app/src/main/res/layout/activity_operators.xml
+++ b/app/src/main/res/layout/activity_operators.xml
@@ -76,5 +76,12 @@
             android:text="@string/debounce"
             android:textColor="@android:color/black" />
 
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="startSingleObserverActivity"
+            android:text="@string/single"
+            android:textColor="@android:color/black" />
+
     </LinearLayout>
 </ScrollView>
