Added Reduce Operator

--- a/app/src/main/res/layout/activity_operators.xml
+++ b/app/src/main/res/layout/activity_operators.xml
@@ -96,5 +96,12 @@
             android:onClick="startFlowableActivity"
             android:text="@string/flowable"
             android:textColor="@android:color/black" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="startReduceActivity"
+            android:text="@string/reduce"
+            android:textColor="@android:color/black" />
     </LinearLayout>
 </ScrollView>
