Added Filter Operator

--- a/app/src/main/res/layout/activity_operators.xml
+++ b/app/src/main/res/layout/activity_operators.xml
@@ -110,5 +110,19 @@
             android:onClick="startBufferActivity"
             android:text="@string/buffer"
             android:textColor="@android:color/black" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="startFilterActivity"
+            android:text="@string/filter"
+            android:textColor="@android:color/black" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="startSkipActivity"
+            android:text="@string/skip"
+            android:textColor="@android:color/black" />
     </LinearLayout>
 </ScrollView>
