--- a/app/src/main/res/layout/activity_operators.xml
+++ b/app/src/main/res/layout/activity_operators.xml
@@ -124,5 +124,11 @@
             android:onClick="startSkipActivity"
             android:text="@string/skip"
             android:textColor="@android:color/black" />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="startScanActivity"
+            android:text="@string/scan"
+            android:textColor="@android:color/black" />
     </LinearLayout>
 </ScrollView>
