--- a/app/src/main/res/layout/activity_operators.xml
+++ b/app/src/main/res/layout/activity_operators.xml
@@ -131,5 +131,12 @@
             android:onClick="startScanActivity"
             android:text="@string/scan"
             android:textColor="@android:color/black" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="startReplayActivity"
+            android:text="@string/replay"
+            android:textColor="@android:color/black" />
     </LinearLayout>
 </ScrollView>
