Added Concat Operator

--- a/app/src/main/res/layout/activity_operators.xml
+++ b/app/src/main/res/layout/activity_operators.xml
@@ -138,5 +138,12 @@
             android:onClick="startReplayActivity"
             android:text="@string/replay"
             android:textColor="@android:color/black" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="startConcatActivity"
+            android:text="@string/concat"
+            android:textColor="@android:color/black" />
     </LinearLayout>
 </ScrollView>
