--- a/app/src/main/res/layout/activity_operators.xml
+++ b/app/src/main/res/layout/activity_operators.xml
@@ -145,5 +145,12 @@
             android:onClick="startConcatActivity"
             android:text="@string/concat"
             android:textColor="@android:color/black" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="startMergeActivity"
+            android:text="@string/merge"
+            android:textColor="@android:color/black" />
     </LinearLayout>
 </ScrollView>
