--- a/app/src/main/res/layout/activity_operators.xml
+++ b/app/src/main/res/layout/activity_operators.xml
@@ -152,5 +152,12 @@
             android:onClick="startMergeActivity"
             android:text="@string/merge"
             android:textColor="@android:color/black" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="startDeferActivity"
+            android:text="@string/defer"
+            android:textColor="@android:color/black" />
     </LinearLayout>
 </ScrollView>
