Added Replay Subject Operator

--- a/app/src/main/res/layout/activity_operators.xml
+++ b/app/src/main/res/layout/activity_operators.xml
@@ -159,5 +159,12 @@
             android:onClick="startDeferActivity"
             android:text="@string/defer"
             android:textColor="@android:color/black" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="startDistinctActivity"
+            android:text="@string/defer"
+            android:textColor="@android:color/black" />
     </LinearLayout>
 </ScrollView>
