--- a/app/src/main/res/layout/activity_operators.xml
+++ b/app/src/main/res/layout/activity_operators.xml
@@ -187,5 +187,12 @@
             android:onClick="startBehaviorSubjectActivity"
             android:text="@string/behavior_subject"
             android:textColor="@android:color/black" />
+
+        <Button
+            android:layout_width="match_parent"s
+            android:layout_height="wrap_content"
+            android:onClick="startAsyncSubjectActivity"
+            android:text="@string/async_subject"
+            android:textColor="@android:color/black" />
     </LinearLayout>
 </ScrollView>
