Added Async Subject Sample

--- a/app/src/main/res/layout/activity_operators.xml
+++ b/app/src/main/res/layout/activity_operators.xml
@@ -189,7 +189,7 @@
             android:textColor="@android:color/black" />
 
         <Button
-            android:layout_width="match_parent"s
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="startAsyncSubjectActivity"
             android:text="@string/async_subject"
