--- a/app/src/main/res/layout/activity_operators.xml
+++ b/app/src/main/res/layout/activity_operators.xml
@@ -194,11 +194,19 @@
             android:onClick="startAsyncSubjectActivity"
             android:text="@string/async_subject"
             android:textColor="@android:color/black" />
+
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="startThrottleFirstActivity"
             android:text="@string/throttle"
+            android:textColor="@android:color/black" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="startThrottleLastActivity"
+            android:text="@string/throttle_last"
             android:textColor="@android:color/black" />
     </LinearLayout>
 </ScrollView>
