--- a/app/src/main/res/layout/activity_operators.xml
+++ b/app/src/main/res/layout/activity_operators.xml
@@ -208,5 +208,12 @@
             android:onClick="startThrottleLastActivity"
             android:text="@string/throttle_last"
             android:textColor="@android:color/black" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="startWindowActivity"
+            android:text="@string/window"
+            android:textColor="@android:color/black" />
     </LinearLayout>
 </ScrollView>
