--- a/RxOperators/src/main/res/layout/activity_operators.xml
+++ b/RxOperators/src/main/res/layout/activity_operators.xml
@@ -223,5 +223,12 @@
             android:onClick="startDelayActivity"
             android:text="@string/delay"
             android:textColor="@android:color/black" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="startRetryActivity"
+            android:text="@string/retry"
+            android:textColor="@android:color/black" />
     </LinearLayout>
 </ScrollView>
